// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders each of the given pinyin 1`] = `
<DocumentFragment>
  <div
    class="pinyinList"
  >
    <code
      class="pinyin"
      id="test-0"
    >
      māo
    </code>
    <code
      class="pinyin"
      id="test-1"
    >
      miāo
    </code>
  </div>
</DocumentFragment>
`;

exports[`renders nothing given no pinyin 1`] = `
<DocumentFragment>
  <div
    class="pinyinList"
  />
</DocumentFragment>
`;
